[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
# See https://setuptools.pypa.io/en/latest/userguide/quickstart.html for more project configuration options.
name = "yieldlang"
dynamic = ["version"]
readme = "README.md"
classifiers = [
  "Intended Audience :: Science/Research",
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
authors = [{ name = "HK-SHAO", email = "hk-shao@outlook.com" }]
requires-python = ">=3.8"
dependencies = [
  # Add your own dependencies here
]
license = { file = "LICENSE" }

[project.urls]
Homepage = "https://github.com/yieldlang/yieldlang"
Repository = "https://github.com/yieldlang/yieldlang"
Changelog = "https://github.com/yieldlang/yieldlang/blob/main/docs/source/CHANGELOG.md"
# Documentation = "https://yieldlang.readthedocs.io/"

[project.optional-dependencies]
dev = [
  "ruff",
  "mypy>=1.0,<1.11",
  "black>=23.0,<25.0",
  "isort>=5.12,<5.14",
  "pytest",
  "pytest-sphinx",
  "pytest-cov",
  "twine>=1.11.0",
  "build",
  "setuptools",
  "wheel",
  "Sphinx>=4.3.0,<7.4.0",
  "furo==2024.4.27",
  "myst-parser>=1.0,<3.1",
  "sphinx-copybutton==0.5.2",
  "sphinx-autobuild==2021.3.14",
  "sphinx-autodoc-typehints==2.0.1",
  "sphinx-autoapi",
  "packaging",
]

[tool.setuptools.packages.find]
exclude = ["*.tests", "*.tests.*", "tests.*", "tests", "docs*", "scripts*"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
yieldlang = ["py.typed"]

[tool.setuptools.dynamic]
version = { attr = "yieldlang.version.VERSION" }

[tool.black]
line-length = 100
include = '\.pyi?$'
exclude = '''
(
      __pycache__
    | \.git
    | \.mypy_cache
    | \.pytest_cache
    | \.vscode
    | \.venv
    | \bdist\b
    | \bdoc\b
)
'''

[tool.isort]
profile = "black"
multi_line_output = 3

# You can override these pyright settings by adding a personal pyrightconfig.json file.
[tool.pyright]
reportPrivateImportUsage = false

[tool.ruff]
line-length = 79
target-version = "py39"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
ignore_missing_imports = true
no_site_packages = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = "tests.*"
strict_optional = false

[tool.pytest.ini_options]
testpaths = "tests/"
python_classes = ["Test*", "*Test"]
log_format = "%(asctime)s - %(levelname)s - %(name)s - %(message)s"
log_level = "DEBUG"
